# test-rp

./: hello.txt  release-please-config.json
back/: .env.version  pyproject.toml
front/: package-lock.json  package.json
